# CourseWork

./: CMakeLists.txt  README.md
include/: common.h  constants.h  qstyles.cpp  qstyles.h
src/: authorwidget.cpp  authorwidget.h  main.cpp  menuwidget.cpp  menuwidget.h  settingswidget.cpp  settingswidget.h  stackedwidget.cpp  stackedwidget.h  startwidget.cpp  startwidget.h  window.cpp  window.h
translations/: app_en.ts  app_ru.ts
